refactor!: commit progress on FHIR module migration to 8.x